[PE] Add "image/apng" to supported image MIME types

Supported for animated PNG (APNG) was added via crbug.com/437662 (commit
eef9692765b6d914837ff949b10d9ef9cbf33bb8 [formerly 7d2b8c45afc9c0230410011293cc2e1dbb8943a7].) The "image/apng" MIME type is
included in the "Accept" header for image requests.

Add "image/apng" to kSupportedImageTypes to allow things like the
<picture> element to work (select an appropriate image based on 'type'.)

Add "image/apng" to kPrimaryMappings to allow the MIME type to resolve
to a reasonable file extension.

Bug: 730588
Change-Id: I070e8b16dc8312552b11dc32e776493b3a5be669
Reviewed-on: https://chromium-review.googlesource.com/957092
Commit-Queue: Fredrik Söderquist <fs@opera.com>
Reviewed-by: Asanka Herath <asanka@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542113}
Former-commit-id: 61d26e9d8d4e15f0ce2653e118933d5d8bac0805